# CRUD_Ai_Agent

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: agents.py  tools.py
app/api/endpoints/v1/: agents_router.py  product_router.py
app/database/: connection.py
app/models/: __init__.py  products_model.py
app/orm/: product_db.py
app/schemas/: stocks_schema.py
